Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <header id="home">
         <div class="heart-main">❤️</div>
-        <h1>Для Анастасії Іванівни😜</h1>
+        <h1>Для Анастасії Іванівни </h1>
         <p>Дуже ціную тебе і твій світ</p>
          
         
@@ -287,4 +287,5 @@
         }, 600);
     </script>
 </body>
+
 </html>
